<resources>
    <string name="app_name">Help</string>
    <string name="dummy_text">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat</string>
    <string name="splash_punch">Largest Local Job Site In The City</string>
    <string name="title_activity_messenger">Chats</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_job">Job</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="jobHead">Carpentry Jobs</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod \t\t\t\t\ttempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, \t\t\t\t\tquis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo \t\t\t\t\tconsequat. Duis aute irure dolor in reprehenderit in voluptate velit esse \t\t\t\t\tcillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non \t\t\t\t\tproident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="prev_job_title">User Experience Manager</string>
    <string name="prev_company">apple</string>
    <string name="search_nav">Search</string>
    <string name="where">Where are you</string>
    <string name="looking">looking for a job?</string>
</resources>
