<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_job"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_job" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_nav" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/title_profile" />

</menu>
