<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_profile"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="50dp">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:elevation="0dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/profile_toolbar"
                    android:layout_width="match_parent"
                    android:outlineProvider="none"
                    android:layout_height="?attr/actionBarSize">

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_arrow_back_black_24dp"/>-->
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/model"
                    app:civ_border_color="#fff"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Margaret Qualley"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Berlin, Germany"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#fff" />
                </LinearLayout>

                <RatingBar
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:numStars="5"
                    android:rating="2"
                    android:stepSize="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/skills_profile"
                        android:paddingLeft="10sp"
                        android:paddingTop="3sp"
                        android:paddingRight="10sp"
                        android:paddingBottom="5sp"
                        android:text="carpentry"
                        android:textColor="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/skills_profile"
                        android:paddingLeft="10sp"
                        android:paddingTop="3sp"
                        android:paddingRight="10sp"
                        android:paddingBottom="5sp"
                        android:text="carpentry"
                        android:textColor="#fff" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-50dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/previous_job_back">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="20dp"
                android:padding="0dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/black_logo"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textFontWeight="600"
                            android:textColor="#444"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:text="@string/prev_job_title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prev_company"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sept. 10, 2018"
                            android:textColor="#D5861A"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_text"
                    android:layout_marginTop="10dp"
                    android:textColor="#555"
                    android:textSize="16sp"
                    android:lineHeight="10pt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="#6B666666" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="20dp"
                android:padding="0dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/black_logo"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textFontWeight="600"
                            android:textColor="#444"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:text="@string/prev_job_title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prev_company"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sept. 10, 2018"
                            android:textColor="#D5861A"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_text"
                    android:layout_marginTop="10dp"
                    android:textColor="#555"
                    android:textSize="16sp"
                    android:lineHeight="10pt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="#6B666666" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>